# 5g-energia-fatura

./: .dockerignore  .gitignore  AGENTS.md  README.md  config.yaml.example  docker-compose.yml  package.json  prompt-front.md  pyproject.toml  turbo.json
.github/workflows/: publish-backend.yml
backoffice-billing-pr1/: README.txt  apply.sh  backoffice-billing.bundle
backoffice-completo/: 00-LEIA-ME-PRIMEIRO.txt
backoffice-completo/01-frontend/: prd-frontend-backoffice.md
backoffice-completo/03-backend-pr2/: PR2_README.md  README-PR2.txt  apply-pr2.sh  backoffice-billing-pr2.bundle
backoffice-completo/04-backend-pr3/: PR3_README.md  README-PR3.txt  apply-pr3.sh  backoffice-billing-pr3.bundle
deploy/: portainer-stack.yml
docs/: api.md  backend-go-api.md  codigos.md  consulta.txt  openapi-go.json  openapi-python.json  openapi.json
docs/architecture/: backend-monorepo.md
docs/neoenergia-private-api/: latest_run.txt
docs/samples/: syncuc-007098175908-response-redacted.json  syncuc-007098175908-response.json  syncuc-007098175908-summary.json  syncuc-7065654738-response-redacted.json  syncuc-7065654738-response.json  syncuc-7065654738-summary.json  utility-invoice-item-normalizer-contract.md
scripts/: bootstrap_neoenergia_token.py  dev.sh  documentar_api_neoenergia.py  explorar_detalhes_uc.py  explorar_faturas.py  explorar_fluxo_completo.py  explorar_portal.py  mapear_api_neoenergia.py  test_sync.py  testar_download.py
services/: AGENTS.md
services/backend-go/: Dockerfile  README.md  go.mod  go.sum
services/doc-extractor-py/: Dockerfile  README.md  pyproject.toml
src/fatura/: api.py  coelba_client.py  config.py  exceptions.py  export_openapi.py  jobs.py  logging_config.py  main.py  mistral_ocr.py  models.py  neoenergia_private_api.py  neoenergia_private_api_docs.py  parser_pdf.py  repository.py  runtime.py  service_models.py
tests/: test_api.py  test_jobs.py  test_neoenergia_private_api_docs.py  test_parser_pdf.py  test_real_api_e2e.py  test_real_mistral_e2e.py  test_real_portal_integration.py
web/: .env.local.example  CLAUDE.md  components.json  docker-compose.yml  package.json  pnpm-lock.yaml  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: app-sidebar.tsx  breadcrumb-sidebar-layout.tsx  dashboard-content.tsx  demo.tsx  (+1 more)
(+457 files in other folders)
